refactored for encapsulation